--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@react-input/mask": "^2.0.4",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "cleave.js": "^1.6.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.15.0",
     "framer-motion": "^12.6.3",
     "html5-qrcode": "^2.3.8",
     "jwt-decode": "^4.0.0",
